<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_safety_controller</name>
  <version>0.0.1</version>
  <description>Robot safety controller with state machine and behavior tree implementations</description>
  
  <maintainer email="marcoatefcosmangadallah@gmail.com">Marco Gadallah</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>smach</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>


</package>


